# bufo-zone

./: .dockerignore  .gitignore  .pylintrc  CRONTAB  Dockerfile  Procfile  README.md  bufo_downloader.py  dbhelper.go  fly.toml  go.mod  go.sum  manage.py  pyproject.toml  query.sql  run.sh  schema.sql  sqlc.yaml  supervisor.conf
bufo/: asgi.py  settings.py  urls.py  wsgi.py
dbufo/: db.go  models.go  query.sql.go
gobufo/: bufo.go  go.mod  go.sum  main.go  query.sql  sqlc.yaml
gobufo/dbufo/: db.go  query.sql.go
gobufo/templates/: index.html
migrations/: 20240622193809_init.sql
syncbufo/: main.go
viewer/: models.py  urls.py  views.py
viewer/management/commands/: bufo_sync.py
viewer/migrations/: 0001_initial.py
viewer/templates/: index.html
